--- a/res/layout/mainview.xml
+++ b/res/layout/mainview.xml
@@ -9,7 +9,6 @@
 	android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
-    <!-- android.support.v7.internal.widget.ListViewCompat android:id="@+id/left_drawer"-->
     <ListView android:id="@+id/left_drawer"
         android:layout_width="240dp"
         android:layout_height="match_parent"
@@ -17,5 +16,5 @@
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
-        android:background="#111"/>
+        android:background="#eee" />
 </android.support.v4.widget.DrawerLayout>
