--- a/res/layout/meal.xml
+++ b/res/layout/meal.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/meal"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/meal_refresh_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    
+   	android:layout_height="wrap_content">
+	<ListView android:id="@android:id/list"
+    	android:layout_width="match_parent"
+    	android:layout_height="match_parent"/>            
 
-</ListView>
+</android.support.v4.widget.SwipeRefreshLayout>
