--- a/app/src/main/res/layout/widget_row.xml
+++ b/app/src/main/res/layout/widget_row.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="start"
-    android:textAppearance="?android:attr/textAppearanceLarge"
-    android:minHeight="?android:attr/listPreferredItemHeight"
-    android:paddingLeft="6dip"
+    android:paddingLeft="16dip"
+    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    android:paddingTop="12dip"
+    android:paddingBottom="12dip"
     android:textColor="#000000"/>
