--- a/app/src/main/res/layout/mainview.xml
+++ b/app/src/main/res/layout/mainview.xml
@@ -7,13 +7,27 @@
     android:layout_height="match_parent">
 	<FrameLayout android:id="@+id/fragment_container"
   	  	android:layout_width="match_parent"
-    	android:layout_height="match_parent" />
-    <ListView android:id="@+id/left_drawer"
-        android:layout_width="240dp"
+    	android:layout_height="match_parent"/>
+    <RelativeLayout
+        android:id="@+id/left_drawer"
         android:layout_height="match_parent"
+        android:layout_width="240dp"
         android:layout_gravity="start"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
-        android:background="#eee" />
+        android:background="#eee" >
+        <ListView android:id="@+id/left_drawer_list"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0dp"/>
+        <!-- Using listview to display one piece of text because using a textView conflicts with
+            the other ListView. Plus, easy to add more stuff if I want to later.-->
+        <ListView
+            android:id="@+id/drawer_settings_link"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:stackFromBottom="true"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0dp"/>
+    </RelativeLayout>
 </android.support.v4.widget.DrawerLayout>
