--- a/app/src/main/res/layout/pager_fragment.xml
+++ b/app/src/main/res/layout/pager_fragment.xml
@@ -4,10 +4,10 @@
       android:layout_height="match_parent"
       android:orientation="vertical">
 
-    <com.example.android.common.view.SlidingTabLayout
-          android:id="@+id/sliding_tabs"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content" />
+    <com.google.samples.apps.iosched.ui.widget.SlidingTabLayout
+        android:id="@+id/sliding_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     
     <android.support.v4.view.ViewPager
           android:id="@+id/viewpager"
