--- a/app/src/main/res/layout/pager_fragment.xml
+++ b/app/src/main/res/layout/pager_fragment.xml
@@ -7,13 +7,13 @@
     <com.google.samples.apps.iosched.ui.widget.SlidingTabLayout
         android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/primary_light"/>
     
     <android.support.v4.view.ViewPager
           android:id="@+id/viewpager"
           android:layout_width="match_parent"
           android:layout_height="0px"
-          android:layout_weight="1"
-          android:background="@android:color/white"/>
+          android:layout_weight="1"/>
     
 </LinearLayout>
