Final changes before store release
-Improved logic for secondary college preference
-color scheme added to widget
-Prevent crash when rotating on 'large' layout (it switches between 3-column and 1-column)
-prevent crash when user clears data then presses buttons on widget
-when automatically loading to closed college it no longer is highlighted in drawer

--- a/app/src/main/res/drawable/arrow_background.xml
+++ b/app/src/main/res/drawable/arrow_background.xml
@@ -2,6 +2,6 @@
 <selector
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true"
-        android:drawable="@color/button_pressed"/>
-    <item android:drawable="@color/button_released"/>
+        android:drawable="@color/primary_dark"/>
+    <item android:drawable="@color/primary_superdark"/>
 </selector>
