--- a/app/src/main/res/values/colors_amber_indigo.xml
+++ b/app/src/main/res/values/colors_amber_indigo.xml
@@ -9,4 +9,6 @@
   <color name="secondary_text">#727272</color>
   <color name="icons">#212121</color>
   <color name="divider">#B6B6B6</color>
+
+    <color name="primary_superdark">#FF9800</color>
 </resources>
