--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
 
         <!-- colorAccent is used as the default value for colorControlActivated
              which is used to tint widgets -->
-        <!--item name="colorAccent">@color/divider</item-->
+        <!--item name="colorAccent">@color/primary_light</item-->
         <item name="colorAccent">@color/accent</item>
 
         <item name="android:textColorPrimary">@color/primary_text</item>
