--- a/app/src/main/res/layout/meal.xml
+++ b/app/src/main/res/layout/meal.xml
@@ -9,7 +9,8 @@
         android:layout_height="wrap_content">
         <ListView android:id="@android:id/list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:background="?attr/listBackground"/>
     </android.support.v4.widget.SwipeRefreshLayout>
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/fab"
@@ -18,7 +19,7 @@
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
         android:src="@drawable/ic_action_go_to_today"
-        fab:fab_colorNormal="@color/primary"
-        fab:fab_colorPressed="@color/primary_dark"
-        fab:fab_colorRipple="@color/primary_light" />
+        fab:fab_colorNormal="?attr/fabMain"
+        fab:fab_colorPressed="?attr/fabPressed"
+        fab:fab_colorRipple="?attr/fabRipple" />
 </FrameLayout>
