--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="MainThemeColorful" parent="@style/Theme.AppCompat.Light">
+    <attr name="actionBarText" format="reference|color" />
+    <attr name="tabBackground" format="reference|color" />
+    <attr name="tabSelector" format="reference|color" />
+    <attr name="fabMain" format="reference|color" />
+    <attr name="fabPressed" format="reference|color" />
+    <attr name="fabRipple" format="reference|color" />
+    <attr name="listBackground" format="reference|color" />
+    <attr name="closedDiningHallText" format="reference|color" />
+    <attr name="drawerBackground" format="reference|color" />
+    <attr name="dividerColor" format="reference|color" />
+
+
+
+    <style name="MainTheme.Dark" parent="@style/Theme.AppCompat">
+        <!--item name="android:actionBarStyle">@style/ColorActionBar</item-->
+        <!-- colorPrimary is used for the default action bar background -->
+        <item name="colorPrimary">@color/dark_primary</item>
+
+        <!-- colorPrimaryDark is used for the status bar -->
+        <item name="colorPrimaryDark">@color/dark_primary_dark</item>
+
+        <!-- colorAccent is used as the default value for colorControlActivated
+             which is used to tint widgets -->
+        <!--item name="colorAccent">@color/primary_light</item-->
+        <item name="colorAccent">@color/dark_accent</item>
+
+        <item name="android:textColorPrimary">@color/dark_primary_text</item>
+        <item name="android:textColorSecondary">@color/dark_secondary_text</item>
+        <item name="android:divider">@color/dark_divider</item>
+        <item name="actionBarText">@color/dark_primary_text</item>
+        <item name="tabBackground">@color/dark_primary_light</item>
+        <item name="tabSelector">@color/dark_primary_text</item>
+        <item name="fabMain">#eeeeee</item>
+        <item name="fabPressed">#ffffff</item>
+        <item name="fabRipple">#dddddd</item>
+        <item name="listBackground">@color/dark_primary</item>
+        <item name="closedDiningHallText">@color/dark_disabled_text</item>
+        <item name="drawerBackground">@color/dark_primary</item>
+        <item name="dividerColor">@color/dark_divider</item>
+        <item name="android:activatedBackgroundIndicator">@drawable/list_activated_background_dark</item>
+    </style>
+
+    <style name="MainTheme.Colorful" parent="@style/Theme.AppCompat.Light">
         <!--item name="android:actionBarStyle">@style/ColorActionBar</item-->
         <!-- colorPrimary is used for the default action bar background -->
         <item name="colorPrimary">@color/primary</item>
@@ -17,16 +59,17 @@
         <item name="android:textColorPrimary">@color/primary_text</item>
         <item name="android:textColorSecondary">@color/secondary_text</item>
         <item name="android:divider">@color/divider</item>
-    </style>
-
-    <style name="ColorActionBar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid">
-        <!-- Title Text color -->
-        <item name="android:titleTextStyle">@style/ColorActionBarText</item>
-    </style>
-
-    <style name="ColorActionBarText"
-        parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="android:textColor">@color/primary_text</item>
+        <item name="actionBarText">@color/primary_text</item>
+        <item name="tabBackground">@color/primary_light</item>
+        <item name="tabSelector">@color/primary</item>
+        <item name="fabMain">@color/primary</item>
+        <item name="fabPressed">@color/primary_dark</item>
+        <item name="fabRipple">@color/primary_light</item>
+        <item name="listBackground">#ffffff</item>
+        <item name="closedDiningHallText">@color/disabled_text</item>
+        <item name="drawerBackground">#eeeeee</item>
+        <item name="dividerColor">@color/divider</item>
+        <item name="android:activatedBackgroundIndicator">@drawable/list_activated_background_light</item>
     </style>
 
 </resources>
